<resources>
    <string name="app_name">My degree</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="year_1">First year</string>
    <string name="year_2">Second year</string>
    <string name="year_3">Third year</string>
    <string name="year_4">Fourth year</string>
    <string name="year_5">Fifth year</string>
    <string name="year_6">Sixth year</string>

    <string name="years">Years</string>
    <string name="chart">Chart</string>
    <string name="semester_1">First semester</string>
    <string name="semester_2">Second semester</string>
    <string name="delete_year_message">You will lose all the data stored in this year, delete?</string>

    <string name="_new">New</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="receive">Receive</string>
    <string name="_continue" >Continue</string>
    <string name="delete_course_message">Do you want to delete this course?</string>

    <string name="this_field_required">This field is required.</string>
    <string name="one_degree_is_required">You must enter theoretical or practical degree at least.</string>
    <string name="degree_should_be_smaller_than_100">Degree should not be more than 100.</string>


    <string name="noData">No data</string>
    <string name="theoretical">Theoretical: %d</string>
    <string name="practical">Practical: %d</string>
    <string name="total">Total: </string>

    <string name="course_name">Course name</string>
    <string name="theoretical_mark">Theoretical degree</string>
    <string name="practical_mark">Practical degree</string>

    <string name="title_courses">Year(%d) semester(%d)</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_chart">Chart</string>

    <string name="the_degree">Degree</string>

    <!-- General Preferences -->
    <string name="general_header">General</string>
    <string name="backup_header">Backup data</string>
    <string name="pass_degree">Pass degree</string>
    <string name="theme">Theme</string>
    <string name="enable_auto_sync">Enable auto-sync</string>
    <string name="delete_server_data">Delete backup data</string>
    <string name="summary_auto_sync_on">Upload backup automatically every week.</string>
    <string name="summary_auto_sync_off">Don\'t upload backup automatically.</string>
    <string-array name="themes">
        <item>Follow system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes_values" translatable="false">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- About -->
    <string name="anas_altair" translatable="false">Anas Altair</string>
    <string name="developer_on_linkedin" translatable="false">Developer on Linkedin</string>
    <string name="send_backup">Upload backup</string>
    <string name="receive_backup">Receive backup</string>
    <string name="sign_in_to_backup">Sign in to upload backup</string>

    <!-- Messages -->
    <string name="message_need_vpn">Connection failed, you may need a VPN</string>
    <string name="message_failed_connect">Connection failed</string>
    <string name="google_signin_failed">Google sign in failed</string>
    <string name="firebase_signin_succeeded">Hello %s, you signed in successfully! you can now upload and receive backup.</string>
    <string name="backup_saved_to_server">Backup uploaded successfully!</string>
    <string name="backup_received_from_server">Backup received successfully!</string>
    <string name="backup_data_empty">There\'s no backup on the server</string>
    <string name="backup_data_corrupted">Data corrupted</string>
    <string name="loading_in_progress">Loading</string>
    <string name="receive_data_warning_message">Your data will be replaced with the backup, do you want to continue?</string>
    <string name="send_backup_warning_message">Backup will be replaced with the new data, do you want to continue?</string>
    <string name="delete_backup_warning_message">You will lose your backup data on the server, do you want to continue?</string>
    <string name="backup_deleted_successfully">Backup deleted successfully</string>

</resources>