<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/general_header"
        app:iconSpaceReserved="false" >

        <ListPreference
            app:key="themePref"
            app:title="@string/theme"
            app:entries="@array/themes"
            app:entryValues="@array/themes_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="-1"
            app:iconSpaceReserved="false" />

        <com.github.anastr.myscore.util.pref.NumberPickerPreference
            app:key="passDegree"
            app:title="@string/pass_degree"
            app:defaultValue="60"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:title="@string/backup_header"
        app:iconSpaceReserved="false" >

        <CheckBoxPreference
            app:key="syncFirestoreData"
            app:defaultValue="false"
            app:title="@string/enable_auto_sync"
            app:summaryOn="@string/summary_auto_sync_on"
            app:summaryOff="@string/summary_auto_sync_off"
            app:iconSpaceReserved="false" />

        <com.github.anastr.myscore.util.pref.DangerPreference
            app:key="deleteServerData"
            app:title="@string/delete_server_data"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>