<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.anastr.myscore.MainActivity">
    <item
        android:id="@+id/settingsFragment"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutFragment"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/sendBackup"
        android:orderInCategory="100"
        android:title="@string/send_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/receiveBackup"
        android:orderInCategory="100"
        android:title="@string/receive_backup"
        app:showAsAction="never" />
</menu>