<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/year_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/year_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/semester_1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/semester_1" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/semester_2_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/semester_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/score_semester_1_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                tools:text="75.3" />

            <TextView
                android:id="@+id/score_semester_2_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                tools:text="68.54" />

        </LinearLayout>

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="72.6" />

    </LinearLayout>

</androidx.cardview.widget.CardView>